syntax= "proto3";

package message;

option go_package="mgrankin-cloud.sso.v1;ssov5";

import "google/protobuf/timestamp.proto";

service Message {
    rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);

    rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse);

    rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);

    rpc PinMessage (PinMessageRequest) returns (PinMessageResponse) {}
}

message GetMessageRequest {
    int64 message_id = 1;
}

message GetMessageResponse {
    int64 message_id = 1;
    string content = 3;
    google.protobuf.Timestamp created_at = 4;
    int64 created_by = 5;
    int64 reply_to = 6;
    int64 received_by = 7;
    google.protobuf.Timestamp received_at = 8;
}

message UpdateMessageRequest {
    int64 message_id = 1;
    string content = 2;
}

message UpdateMessageResponse {
    int64 message_id = 1;
    bool success = 2;
}

message DeleteMessageRequest {
    int64 message_id = 1;
}

message DeleteMessageResponse {
    int64 message_id = 1;
    bool success = 2;
}

message PinMessageRequest {
    int64 message_id = 1;
    bool pin = 2;
}

message PinMessageResponse {
    bool success = 1;
}


